# http-pipe

./: Cargo.toml  Dockerfile  README.md  README.org
src/: main.rs
src/client/: client.rs  mod.rs  receiver.rs  sender.rs
src/common/: headers.rs  log.rs  mod.rs  packet.rs
src/server/: mod.rs  queue.rs  server.rs
