[package]
name = "http-pipe"
version = "0.2.0"
authors = ["Yifei Wang <yifei529@gmail.com>"]
license-file = "LICENSE"
description = "Piping data from one host to another using a relay server"
repository = "https://github.com/cww0614/http-pipe/"
edition = "2018"

[profile.release]
lto = true

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = "0.10"
actix-web = "3.0"
actix-rt = "1.0"
atty = "0.2"
anyhow = "1.0"
log = "0.4"
simplelog = "0.8"
pin-project = "1.0"
bytes = "0.5"
futures = "0.3"
clap = "3.0.0-beta.1"
thiserror = "1.0"